--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,7 +49,11 @@
     width: 100%;
   }
 }
-
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
+  }
+}
 footer {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -960,4 +964,20 @@ footer cite a {
   height: 24px;
   width: 80px;
   margin: 0 auto;
+}
+
+.paystack-button {
+  cursor: pointer;
+  text-align: center;
+  font-size: 10px;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  background-color: #bfbfbf;
+  font-weight: bold;
+  color: #e0eafc;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  height: 45px;
+  margin-top: 40px;
 }
